--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-Figure out what to do about randomness. This is a serious problem.
-SJCL? http://crypto.stanford.edu/sjcl/
-window.crypto.getRandomValues?
+For now, use window.crypto.getRandomValues in the browser and the
+"crypto" module in node.js for good randomness. Fallback option for
+the browser could be SJCL? http://crypto.stanford.edu/sjcl/
 
 Figure out what to do about the shift count overflow warnings.
